--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,8 +49,8 @@
                     <button id="phone-toggle" class="btn phone-btn rounded-circle" aria-label="Phone Toggle">
                         <img id="phone-icon" src="{{ url_for('static', filename='images/phone_icon_on_light.svg') }}" alt="Phone Toggle" class="img-fluid">
                     </button>
-                    <button id="abc-toggle" class="btn abc-btn rounded-circle" aria-label="ABC Toggle" style="margin-left: 0.5rem;">
-                        <img id="abc-icon" src="{{ url_for('static', filename='images/abc_icon_off_light.svg') }}" alt="ABC Toggle" class="img-fluid">
+                    <button id="match-toggle" class="btn match-btn rounded-circle" aria-label="Match Toggle" style="margin-left: 0.5rem;">
+                        <img id="match-icon" src="{{ url_for('static', filename='images/sentence_match_icon_off_light.svg') }}" alt="Match Toggle" class="img-fluid">
                     </button>
                 </div>
                 <div id="content-area" class="mt-4">
