--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,6 +52,9 @@
                     <button id="match-toggle" class="btn match-btn rounded-circle" aria-label="Match Toggle" style="margin-left: 0.5rem;">
                         <img id="match-icon" src="{{ url_for('static', filename='images/sentence_match_icon_off_light.svg') }}" alt="Match Toggle" class="img-fluid">
                     </button>
+                    <button id="semantic-toggle" class="btn semantic-btn rounded-circle" aria-label="Semantic Toggle" style="margin-left: 0.5rem;">
+                        <img id="semantic-icon" src="{{ url_for('static', filename='images/abc_icon_off_light.svg') }}" alt="Semantic Toggle" class="img-fluid">
+                    </button>
                 </div>
                 <div id="content-area" class="mt-4">
                     <!-- Dynamic content will go here -->
